fix comment overflow css

--- a/client/src/components/Post/AddComment.css
+++ b/client/src/components/Post/AddComment.css
@@ -22,13 +22,13 @@
   }
   
   label {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
   
   textarea {
-    width: 100%;
+    max-width: 100%;
     height: 100px; /* Adjustable height */
-    padding: 10px;
     border: 1px solid #ced4da;
     border-radius: 4px;
     resize: vertical; /* Allows resizing the textarea vertically */
